VEIIA-41 deleted useless endpoints / added support of jwt
