# docs/swagger.json
@@ -4,9 +4,9 @@
         "contact": {}
     },
     "paths": {
-        "/user/list": {
+        "/v1/jwt/get": {
             "get": {
-                "description": "get list of users",
+                "description": "get existing jwt token for user",
                 "consumes": [
                     "application/json"
                 ],
@@ -14,17 +14,14 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "jwt"
                 ],
-                "summary": "Get users",
+                "summary": "get jwt token",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/userModel.User"
-                            }
+                            "$ref": "#/definitions/jwtModel.JWTTokenResponse"
                         }
                     },
                     "400": {
@@ -42,9 +39,9 @@
                 }
             }
         },
-        "/user/sign-in": {
-            "post": {
-                "description": "sign in",
+        "/v1/jwt/revoke": {
+            "delete": {
+                "description": "revoke existing jwt token for user",
                 "consumes": [
                     "application/json"
                 ],
@@ -52,25 +49,14 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "jwt"
                 ],
-                "summary": "Sign in user",
-                "parameters": [
-                    {
-                        "description": "User Info",
-                        "name": "message",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/userModel.UserSignIn"
-                        }
-                    }
-                ],
+                "summary": "revoke jwt token",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/userModel.UserIdResponse"
+                            "$ref": "#/definitions/jwtModel.JWTTokenResponse"
                         }
                     },
                     "400": {
@@ -88,9 +74,9 @@
                 }
             }
         },
-        "/user/sign-up": {
+        "/v1/jwt/update": {
             "post": {
-                "description": "sign up",
+                "description": "update existing jwt token for user",
                 "consumes": [
                     "application/json"
                 ],
@@ -98,9 +84,44 @@
                     "application/json"
                 ],
                 "tags": [
-                    "user"
+                    "jwt"
                 ],
-                "summary": "Sign up user",
+                "summary": "update jwt token",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/jwtModel.JWTTokenResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/log-out": {
+            "post": {
+                "description": "route for logging out from veiia system",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "core"
+                ],
+                "summary": "Log Out core",
                 "parameters": [
                     {
                         "description": "User Info",
@@ -108,7 +129,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/userModel.User"
+                            "$ref": "#/definitions/coreModel.UserLogOutRequest"
                         }
                     }
                 ],
@@ -116,7 +137,99 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/userModel.UserIdResponse"
+                            "$ref": "#/definitions/coreModel.UserIdResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/sign-in": {
+            "post": {
+                "description": "route for signing in to veiia system",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "core"
+                ],
+                "summary": "Sign in core",
+                "parameters": [
+                    {
+                        "description": "User Info",
+                        "name": "message",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/coreModel.UserSignInRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/coreModel.UserIdResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/sign-up": {
+            "post": {
+                "description": "route for signing up to veiia system",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "core"
+                ],
+                "summary": "Sign up core",
+                "parameters": [
+                    {
+                        "description": "User Info",
+                        "name": "message",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/coreModel.User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/coreModel.UserIdResponse"
                         }
                     },
                     "400": {
@@ -136,7 +249,7 @@
         }
     },
     "definitions": {
-        "userModel.User": {
+        "coreModel.User": {
             "type": "object",
             "required": [
                 "email",
@@ -159,7 +272,7 @@
                 }
             }
         },
-        "userModel.UserIdResponse": {
+        "coreModel.UserIdResponse": {
             "type": "object",
             "properties": {
                 "id": {
@@ -167,7 +280,7 @@
                 }
             }
         },
-        "userModel.UserSignIn": {
+        "coreModel.UserLogOutRequest": {
             "type": "object",
             "required": [
                 "password",
@@ -178,6 +291,29 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "coreModel.UserSignInRequest": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "jwtModel.JWTTokenResponse": {
+            "type": "object",
+            "properties": {
+                "token": {
                     "type": "string"
                 }
             }
