# internal/domain/core/requests.go
@@ -1,25 +1,18 @@
-package userModel
+package coreModel
 
-type User struct {
-	Id       int    `json:"-"`
-	Name     string `json:"name" binding:"required"`
-	Username string `json:"username" binding:"required"`
-	Password string `json:"password" binding:"required" db:"encrypted_password"`
-	Email    string `json:"email" binding:"required"`
-}
-
-type UserSignUp struct {
+type UserSignUpRequest struct {
 	Name     string `json:"name" binding:"required"`
 	Username string `json:"username" binding:"required"`
 	Password string `json:"password" binding:"required"`
 	Email    string `json:"email" binding:"required"`
 }
 
-type UserSignIn struct {
+type UserSignInRequest struct {
 	Username string `json:"username" binding:"required"`
 	Password string `json:"password" binding:"required"`
 }
 
-type UserIdResponse struct {
-	Id int `json:"id"`
+type UserLogOutRequest struct {
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required"`
 }
