# internal/domain/core/responses.go
@@ -1,0 +1,5 @@
+package coreModel
+
+type UserIdResponse struct {
+	Id int `json:"id"`
+}
