# internal/domain/core/types.go
@@ -1,0 +1,9 @@
+package coreModel
+
+type User struct {
+	Id       int    `json:"-"`
+	Name     string `json:"name" binding:"required"`
+	Username string `json:"username" binding:"required"`
+	Password string `json:"password" binding:"required" db:"encrypted_password"`
+	Email    string `json:"email" binding:"required"`
+}
